Build skeleton for geofencing zones